<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First">

    <include
        android:id="@+id/include"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/colorButton"
        android:padding="0dp"
        android:text="@string/select_complete"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/big_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_1"
            android:text="@string/ask_preference"
            android:textSize="@dimen/big_font_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_1"
            android:text="@string/preference_assist"
            android:textSize="@dimen/normal_font_size"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <!--
        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TableRow>

                <TextView
                    android:id="@+id/category1"
                    android:padding="@dimen/cat_table_padding"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/category2"
                    android:padding="@dimen/cat_table_padding"
                    android:textSize="@dimen/normal_font_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="카테고리3"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>-->
        <GridView
            android:id="@+id/category_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:choiceMode="multipleChoice"
            android:numColumns="2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>